# traderDelta

./: .gitignore  README.md  kwargs_example.py  main.py  pyproject.toml
app/: logger.py  tt.py
backend/: app.py  pyproject.toml
backend/libs/quant/: pyproject.toml
backend/libs/quant/deltafq/: __init__.py
backend/libs/quant/deltafq/adapters/: __init__.py
backend/libs/quant/deltafq/adapters/data/: __init__.py  miniqmt_gateway.py  yfinance_gateway.py
backend/libs/quant/deltafq/adapters/trade/: __init__.py  miniqmt_client.py  miniqmt_gateway.py  paper_gateway.py
backend/libs/quant/deltafq/backtest/: __init__.py  engine.py  metrics.py  performance.py
backend/libs/quant/deltafq/charts/: __init__.py  performance.py  price.py  signals.py
backend/libs/quant/deltafq/core/: __init__.py  base.py  config.py  logger.py
backend/libs/quant/deltafq/data/: __init__.py  cleaner.py  fetcher.py  miniqmt_xtdata.py  source_map.py  storage.py
backend/libs/quant/deltafq/indicators/: __init__.py  fundamental.py  talib_indicators.py  technical.py
backend/libs/quant/deltafq/live/: __init__.py  engine.py  event_engine.py  gateway_registry.py  gateways.py  models.py
backend/libs/quant/deltafq/strategy/: __init__.py  base.py  signals.py
backend/libs/quant/deltafq/trader/: __init__.py  engine.py  order_manager.py  position_manager.py
backend/src/: config.py  create_app.py
backend/src/core/: live_data_manager.py
docs/: 3osPath.md  4datasave.md  5log_in_frontend.md  6log_ways.md
docs/1logs/: 1logdata.md  2set.md
docs/2pandas/: practice.ipynb
frontend/static/css/: ai-assistant.css  common.css  index.css  style.css  trader.css
frontend/static/js/: ai-assistant.js  backtest.js  common.js  trader.js
frontend/templates/: _ai_assistant.html  backtest.html  gostrategy.html  index.html  trader.html
libs/quant/: README.md  pyproject.toml
libs/quant/examples/: 1fetch_yahoo_data.py  z.py
libs/quant/quant/: __init__.py  te.py
libs/quant/quant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
libs/quant/quant/core/: __init__.py  base.py  config.py  logger.py
libs/quant/quant/data/: __init__.py  cleaner.py  fetcher.py  miniqmt_xtdata.py  storage.py
