[project]
name = "traderdelta"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "quant",
    "ipykernel>=7.2.0",
    "xtquant>=250516.1.1",
]

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
quant = { workspace = true }

