[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "deltafq"
]

[tool.uv.workspace]
members = ["libs/quant"]

[tool.uv.sources]
deltafq = { workspace = true }
