[project]
name = "quant"
version = "0.1.0"
requires-python = ">=3.13"
description = "Add your description here"

authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies
[
    "akshare>=1.18.60",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "yfinance>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quant*"]


[project.urls]
Homepage = "https://github.com/yourusername/quant"
Repository = "https://github.com/yourusername/quant.git"

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"