[project]
name = "deltafq"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.18.63",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "ta-lib>=0.6.8",
    "yfinance>=1.4.0",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["deltafq/**"]

# 构建配置
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 包发现配置
[tool.hatch.build.targets.wheel]
packages = ["deltafq"]
